# aott

./: Makefile  Makefile.am  angela-typing-tutor.desktop  aott.c  aott.h  autogen.sh  configure.ac  loader.c  malayalam_letter.txt  postinst  tts.c  tts.h  ui.c  ui.h
data/: Makefile.am
data/data/: English  Makefile.am  Malayalam-easy
data/faces/: Makefile.am
data/hands/: Makefile.am
data/number/: Makefile.am
data/sounds/: Makefile.am
data/ui/: Makefile.am  ui.glade
packing/: att.spec  control
po/: Makefile.am
po/hi/: Makefile.am  aott.mo  hi.po
po/ml/: Makefile.am  aott.mo  ml.po
pot/: all.pot  glade_about.pot  glade_ui.pot  source_aott.pot
src/: Makefile.am  aott.c  aott.h  ui.c  ui.h
src/.deps/: aott.Po  tts.Po  typing_tutor-aott.Po  typing_tutor-tts.Po  typing_tutor-ui.Po  ui.Po
usr/share/angela-open-talking-typer/data/: English  Malayalam
usr/share/angela-open-talking-typer/ui/: about.glade  angela  ui.glade
usr/share/angela-typing-tutor/data/: English  English-easy  Hindi  Test
usr/share/angela-typing-tutor/ui/: about.glade  ui.glade
