# vim:set noet ts=4:
#
# ibus-sharada-braille - The braille ibus engine
#
# Copyright (c) 2007-2011 Peng Huang <shawn.p.huang@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

hands_DATA = \
	hands_0.gif \
	hands_1.gif \
	hands_2.gif \
	hands_3.gif \
	hands_4.gif \
	hands_5.gif \
	hands_6.gif \
	hands_7.gif \
	hands_8.gif \
	hands_9.gif \
	hands.png
	$(NULL)

handsdir = $(pkgdatadir)/hands
		
CLEANFILES = \
	*~ \
	$(NULL)

