# vim:set noet ts=4:
#
# ibus-sharada-braille - The braille ibus engine
#
# Copyright (c) 2007-2011 Peng Huang <shawn.p.huang@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

sounds_DATA = \
	clap.ogg \
	excellent.ogg \
	good.ogg \
	next_level_0.ogg \
	next_level_1.ogg \
	next_level_2.ogg \
	next_level_3.ogg \
	next_level_4.ogg \
	next_level_5.ogg \
	next_level_6.ogg \
	ok.ogg \
	start.ogg \
	try_more_fast.ogg \
	type.ogg \
	very_good.ogg \
	wrong_pressed.ogg \
	$(NULL)

soundsdir = $(pkgdatadir)/sounds
		
CLEANFILES = \
	*~ \
	$(NULL)

